--- a/funsArea - swfit/Base.lproj/Main.storyboard
+++ b/funsArea - swfit/Base.lproj/Main.storyboard
@@ -1,24 +1,137 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="1tt-1k-NiZ">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--列表-->
+        <scene sceneID="KnP-Pn-dAU">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                <tableViewController id="VD3-hA-mO4" customClass="AreaTableViewController" customModule="funsArea___swfit" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="100" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="NsN-Bh-BgK">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" rowHeight="100" id="Xge-xX-zQu" customClass="CustomTableViewCell" customModule="funsArea___swfit" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="100"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Xge-xX-zQu" id="HPw-jz-gOO">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="99.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="sbO-J6-HU1">
+                                            <rect key="frame" x="10" y="20" width="60" height="60"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="60" id="ZB5-58-8Py"/>
+                                                <constraint firstAttribute="width" constant="60" id="qG3-Cp-Ryl"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ipN-C1-SQH">
+                                            <rect key="frame" x="80" y="20" width="35.5" height="17"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lcS-xe-BMF">
+                                            <rect key="frame" x="80" y="63" width="35.5" height="17"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vG6-9o-n6t">
+                                            <rect key="frame" x="80" y="42" width="35.5" height="17"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="ipN-C1-SQH" firstAttribute="top" secondItem="sbO-J6-HU1" secondAttribute="top" id="4ic-Gp-hMy"/>
+                                        <constraint firstItem="vG6-9o-n6t" firstAttribute="leading" secondItem="sbO-J6-HU1" secondAttribute="trailing" constant="10" id="MiZ-Qp-8ez"/>
+                                        <constraint firstItem="sbO-J6-HU1" firstAttribute="leading" secondItem="HPw-jz-gOO" secondAttribute="leading" constant="10" id="Wdr-zm-xsI"/>
+                                        <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="vG6-9o-n6t" secondAttribute="trailing" constant="20" symbolic="YES" id="Zk2-i5-Slh"/>
+                                        <constraint firstItem="lcS-xe-BMF" firstAttribute="leading" secondItem="sbO-J6-HU1" secondAttribute="trailing" constant="10" id="bUG-uy-hV8"/>
+                                        <constraint firstItem="lcS-xe-BMF" firstAttribute="bottom" secondItem="sbO-J6-HU1" secondAttribute="bottom" id="gBy-Qh-uep"/>
+                                        <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="ipN-C1-SQH" secondAttribute="trailing" constant="20" symbolic="YES" id="nqC-xb-ARS"/>
+                                        <constraint firstItem="sbO-J6-HU1" firstAttribute="centerY" secondItem="HPw-jz-gOO" secondAttribute="centerY" id="oCO-lW-DUi"/>
+                                        <constraint firstItem="vG6-9o-n6t" firstAttribute="centerY" secondItem="sbO-J6-HU1" secondAttribute="centerY" id="rg0-Z5-27x"/>
+                                        <constraint firstItem="ipN-C1-SQH" firstAttribute="leading" secondItem="sbO-J6-HU1" secondAttribute="trailing" constant="10" id="wnF-i0-zPY"/>
+                                        <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="lcS-xe-BMF" secondAttribute="trailing" constant="20" symbolic="YES" id="zrM-Sa-Zb2"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="detailLabel" destination="lcS-xe-BMF" id="Dsv-AI-eak"/>
+                                    <outlet property="fontLabel" destination="vG6-9o-n6t" id="6qD-Go-w0s"/>
+                                    <outlet property="headImageView" destination="sbO-J6-HU1" id="VMn-B6-Ggo"/>
+                                    <outlet property="nameLabel" destination="ipN-C1-SQH" id="Jxx-dC-aO5"/>
+                                    <segue destination="myJ-IK-GwX" kind="show" identifier="showAreaDetail" id="yjn-hW-jhr"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="VD3-hA-mO4" id="B3w-b0-CVf"/>
+                            <outlet property="delegate" destination="VD3-hA-mO4" id="xdL-yC-ZNG"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="列表" id="FDa-Vk-ssQ"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Snu-kC-egy" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1340" y="0.44977511244377816"/>
+        </scene>
+        <!--Area Detail View Controller-->
+        <scene sceneID="Rue-tJ-lI4">
+            <objects>
+                <viewController id="myJ-IK-GwX" customClass="AreaDetailViewController" customModule="funsArea___swfit" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="xHq-O7-X5X">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="4tI-kT-iz5">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="4tI-kT-iz5" firstAttribute="top" secondItem="xHq-O7-X5X" secondAttribute="top" id="0t9-JK-ZuE"/>
+                            <constraint firstAttribute="trailing" secondItem="4tI-kT-iz5" secondAttribute="trailing" id="OV9-Lj-FfQ"/>
+                            <constraint firstAttribute="bottom" secondItem="4tI-kT-iz5" secondAttribute="bottom" id="kC4-AR-obc"/>
+                            <constraint firstItem="4tI-kT-iz5" firstAttribute="leading" secondItem="xHq-O7-X5X" secondAttribute="leading" id="sbO-Ln-vnd"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="lzX-eg-Dd2"/>
+                    </view>
+                    <connections>
+                        <outlet property="areaImageView" destination="4tI-kT-iz5" id="77R-sh-XhV"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Yxn-8A-stP" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2072.8000000000002" y="8.5457271364317844"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="mkS-Ro-tXZ">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="1tt-1k-NiZ" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="cxT-8V-T2D">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="VD3-hA-mO4" kind="relationship" relationship="rootViewController" id="cNS-dN-goh"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qmz-X0-cOv" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="553" y="0.0"/>
         </scene>
     </scenes>
 </document>
